[tool.poetry]
name = "virbpy"
version = "0.1.0"
description = ""
authors = ["S. Co1 <sco1.git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25"
click = "^7.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-docstrings = "^1.3"
black = {version = "*", allows-prereleases=true}
pre-commit = "^1.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
